crates/schemas/tests/snapshots/schema_snapshot_tests__schema_error_unsupported_version.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Unsupported schema version: wheel.profile/99
