crates/schemas/tests/snapshots/schema_snapshot_tests__schema_error_validation.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Validation error at base.filters.friction: value must be between 0.0 and 1.0
