crates/schemas/tests/snapshots/schema_snapshot_tests__telemetry_flags_active_race_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "yellow_flag": true,
  "red_flag": false,
  "blue_flag": false,
  "checkered_flag": false,
  "green_flag": true,
  "pit_limiter": false,
  "in_pits": false,
  "drs_available": true,
  "drs_active": false,
  "ers_available": false,
  "ers_active": false,
  "launch_control": false,
  "traction_control": true,
  "abs_active": true,
  "engine_limiter": false,
  "safety_car": false,
  "formation_lap": false,
  "session_paused": false
}
