crates/schemas/tests/snapshots/schema_snapshot_tests__telemetry_snapshot_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "timestamp_ns": 1000000000,
  "speed_ms": 55.0,
  "steering_angle": -0.1,
  "throttle": 1.0,
  "brake": 0.0,
  "clutch": 0.0,
  "rpm": 7200.0,
  "max_rpm": 8500.0,
  "gear": 5,
  "num_gears": 7,
  "lateral_g": 0.8,
  "longitudinal_g": 0.5,
  "vertical_g": 0.0,
  "slip_ratio": 0.02,
  "slip_angle_fl": 0.0,
  "slip_angle_fr": 0.0,
  "slip_angle_rl": 0.0,
  "slip_angle_rr": 0.0,
  "ffb_scalar": -0.6,
  "ffb_torque_nm": 0.0,
  "flags": {
    "yellow_flag": false,
    "red_flag": false,
    "blue_flag": false,
    "checkered_flag": false,
    "green_flag": true,
    "pit_limiter": false,
    "in_pits": false,
    "drs_available": false,
    "drs_active": false,
    "ers_available": false,
    "ers_active": false,
    "launch_control": false,
    "traction_control": false,
    "abs_active": false,
    "engine_limiter": false,
    "safety_car": false,
    "formation_lap": false,
    "session_paused": false
  },
  "position": 3,
  "lap": 12,
  "current_lap_time_s": 82.5,
  "fuel_percent": 0.65,
  "sequence": 42
}
